--- a/rule1/feature/02_return_on_capital_5_year_avg/results/return_on_capital_5_year_avg.html
+++ b/rule1/feature/02_return_on_capital_5_year_avg/results/return_on_capital_5_year_avg.html
@@ -1,3 +1,3 @@
 <table style=width:75% CLASS=boldtable><tr>
-<td>Return_on_capital_5_year_avg (4.00)</td>
+<td>Apple Inc - Return_on_capital_5_year_avg (33.30)</td>
 </tr><tr>
