--- a/rule1/feature/01_return_on_capital/results/return_on_capital.html
+++ b/rule1/feature/01_return_on_capital/results/return_on_capital.html
@@ -1,3 +1,3 @@
 <table style=width:75% CLASS=boldtable><tr>
-<td>Apple Inc - Return_on_capital 29.64</td>
+<td>Toyota - Return_on_capital 6.17</td>
 </tr><tr>
