--- a/rule1/feature/09a_pe_ratio_ltm/results/pe_ratio_ltm.html
+++ b/rule1/feature/09a_pe_ratio_ltm/results/pe_ratio_ltm.html
@@ -1,3 +1,3 @@
 <table style=width:75% CLASS=boldtable><tr>
-<td>Toyota - Return_on_capital_5_year_avg (4.00)</td>
+<td>Pe_ratio_ltm </td>
 </tr><tr>
