--- a/rule1/feature/10_growth_estimate/results/growth_estimate.html
+++ b/rule1/feature/10_growth_estimate/results/growth_estimate.html
@@ -1,3 +1,3 @@
 <table style=width:75% CLASS=boldtable><tr>
-<td>Toyota - Return_on_capital_5_year_avg (4.00)</td>
+<td>Growth_estimate 11.63%</td>
 </tr><tr>
