--- a/rule1/feature/A00_company_symbol_and_name/results/daily_quote.html
+++ b/rule1/feature/A00_company_symbol_and_name/results/daily_quote.html
@@ -1,3 +1,3 @@
 <table style=width:75% CLASS=boldtable><tr>
-<td>Toyota - Return_on_capital_5_year_avg (4.00)</td>
+<td>Toyota - Daily_quote 106.32</td>
 </tr><tr>
