--- a/rule1/feature/09_growth_estimate/results/growth_estimate.html
+++ b/rule1/feature/09_growth_estimate/results/growth_estimate.html
@@ -1,3 +1,3 @@
 <table style=width:75% CLASS=boldtable><tr>
-<td>Coca-Cola Co - Return_on_capital 10.63</td>
+<td>Coca-Cola Co - Growth_estimate 2.20%</td>
 </tr><tr>
