--- a/rule1/feature/08_pe_and_eps/results/pe_and_eps.html
+++ b/rule1/feature/08_pe_and_eps/results/pe_and_eps.html
@@ -1,3 +1,3 @@
 <table style=width:75% CLASS=boldtable><tr>
-<td>Coca-Cola Co - Return_on_capital 10.63</td>
+<td>Coca-Cola Co - Pe_and_eps 27.32 (1.67) </td>
 </tr><tr>
